# challs

./: README.md  Template-Readme.md
Web/baby-viewstate/: Dockerfile  Readme.md
Web/baby-viewstate/app/: app.py  pyproject.toml
Web/baby-viewstate/solve/: solve.py  solve_rce.py
Web/baby-viewstate/user/pwned_user/: flag
Web/encrypted-viewstate/: Readme.md
Web/encrypted-viewstate/app/: app.py
Web/encrypted-viewstate/solve/: pyproject.toml  solve.py
Web/encrypted-viewstate/user/pwned_user/: flag  getflag.c
